fixes pacman flicker

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,21 +4,20 @@ body {
     font-family: var(--font-bebas-neue), sans-serif;  
     margin: 0;
     padding: 0;    
-    overflow: hidden; 
 }
 
 h1, h2, h3 {
     margin-top: 0;
-    letter-spacing: 0.1em;     
+    letter-spacing: 0.05em;     
     line-height: 1.1; 
 }
 .banner{
   font-size: 120px;
   letter-spacing: 0.1em;     
-    line-height: 1.1; 
+  line-height: 1.1; 
 }
 h1 {
-    font-size: 2.5rem;
+    font-size: 72px;
 }
 
 h2 {
